# food-fraud-cv

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: cooked.yaml  default.yaml  real.yaml
data/generated_real/: manifest.csv
docs/: 01-data-generation-and-models.md  02-results-slice.md  03-real-pipeline.md  04-results-real.md  05-production-roadmap.md  06-cooked-food.md  07-layered-system.md  08-results-cooked.md  09-generalizacion.md
notebooks/: food_fraud_cv_colab.ipynb
report/: index.html
scripts/: run_cooked.py  run_decision.py  run_evaluate.py  run_experiment.py  run_generalization.py  run_generate.py  run_real.py  run_train.py
src/: config.py
src/data/: corpus.py  sources.py
src/decision/: policy.py
src/detection/: adversarial.py  baseline.py  behavioral.py  finetune.py  forensic.py  fusion.py  layered.py  provenance.py
src/evaluation/: logo.py  metrics.py  report.py
src/generation/: classical.py  diffusion.py
tests/: test_data.py  test_decision.py  test_forensic.py  test_pipeline.py
